# ArilKV

./: .gitattributes  .gitignore  AGENTS.md  CODEX_GLOBAL_INSTRUCTION.md  Cargo.toml  Makefile  PERFORMANCE.md  README.md  TODO_AND_STATUS.md  deep-research-instructions.md  rust-toolchain.toml
docs/: main.js  (+9 more)
garnet-rs/: .dockerignore  Cargo.toml
garnet-rs/benches/: AGENT.md  DEEPRESEARCH_DRAGONFLY_INSTRUCTION.md  DOCKER_TROUBLESHOOTING_LOCAL.md  Dockerfile.garnet-rs-cachebench  README.md  binary_ab_local.sh  cache_benchmarks_dragonfly_docker_wrapper.sh  cache_benchmarks_garnet_docker_wrapper.sh  cache_benchmarks_garnet_wrapper.sh  docker_linux_perf_diff_profile.sh  linux_perf_diff_profile.sh  linux_perf_diff_profile_median_local.sh  local_hotspot_framegraph_macos.sh  perf_regression_gate_local.sh  redis_official_benchmark.sh  sweep_string_store_shards_local.sh
garnet-rs/crates/garnet-cluster/: Cargo.toml
garnet-rs/crates/garnet-cluster/src/: lib.rs
garnet-rs/crates/garnet-common/: Cargo.toml
garnet-rs/crates/garnet-common/src/: lib.rs  resp.rs  span_byte.rs
garnet-rs/crates/garnet-server/: Cargo.toml
garnet-rs/crates/garnet-server/benches/: redis_command_path.rs
garnet-rs/crates/garnet-server/src/: AGENT.md  README.md  aof_durability.rs  aof_replay.rs  cluster_control_plane.rs  command_dispatch.rs  command_spec.rs  config_paths.rs  connection_handler.rs  connection_owner_routing.rs  connection_protocol.rs  connection_routing.rs  connection_transaction.rs  debug_concurrency.rs  lib.rs  limited_fixed_buffer_pool.rs  main.rs  main_tests.rs  multi_port_runtime.rs  redis_replication.rs  request_lifecycle.rs  server_launch_config.rs  server_runtime.rs  shard_owner_threads.rs  testkit.rs  tests.rs
garnet-rs/crates/garnet-server/tests/: redis_cli_compat.rs
garnet-rs/crates/tsavorite/: Cargo.toml
garnet-rs/crates/tsavorite/benches/: phase1_hotpath.rs
garnet-rs/crates/tsavorite/src/: aof_log.rs  checkpoint_aof_coordinator.rs  checkpoint_state_machine.rs  delete_operation.rs  epoch.rs  hash_bucket.rs  hash_bucket_entry.rs  hash_index.rs  lib.rs  overflow_bucket_allocator.rs  read_operation.rs  record_info.rs  rmw_operation.rs  session_functions.rs  tsavorite_kv.rs  upsert_operation.rs
garnet-rs/tests/: AGENT.md  README.md
garnet-rs/tests/interop/: AGENT.md  README.md  build_command_maturity_matrix.sh  build_command_status_matrix.sh  build_compatibility_report.sh  cluster_capability_matrix.sh  cluster_wait_failover_gap_probe.sh  command_coverage_audit.sh  known-failed-tests-singledb.txt  redis_runtest_external_subset.sh  replication_capability_matrix.sh
(+1374 files in other folders)
