[package]
name = "garnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
crossbeam-queue.workspace = true
garnet-common = { path = "../garnet-common" }
garnet-cluster = { path = "../garnet-cluster" }
tsavorite = { path = "../tsavorite" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "redis_command_path"
harness = false
