[package]
name = "garnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies]
tokio.workspace = true
crossbeam-queue.workspace = true
garnet-common = { path = "../garnet-common" }
garnet-cluster = { path = "../garnet-cluster" }
tsavorite = { path = "../tsavorite" }
mimalloc = { version = "0.1", default-features = false, optional = true }
core_affinity = "0.8"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "redis_command_path"
harness = false
