[package]
name = "garnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies]
tokio.workspace = true
crossbeam-queue.workspace = true
garnet-common = { path = "../garnet-common" }
garnet-cluster = { path = "../garnet-cluster" }
tsavorite = { path = "../tsavorite" }
mimalloc = { version = "0.1", default-features = false, optional = true }
core_affinity = "0.8"
mlua = { version = "0.11.6", features = ["lua51", "vendored"] }
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ryu.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "redis_command_path"
harness = false
